Fix for prompt autocomplete options getting cut off
If you typed "c" into the autocomplete, it used to always show a scroll bar no mater how much space you had available on the screen. Now it will only show a scrollbar if there isn't enough room at the bottom of the page to display the drop-down.

--- a/lesscss/components/prompts.less
+++ b/lesscss/components/prompts.less
@@ -1,6 +1,7 @@
 .all-prompts {
   padding: @medium-spacer;
   flex-shrink: 1;
+  flex-grow: 1;
   overflow-y: auto;
   min-height: @prompt-minimum-height + (@medium-spacer * 4);
 }
